<resources>
    <string name="app_name">30 days challenge</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_new_task">AddNewTaskActivity</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="event">Event</string>
    <string name="add">Add</string>
    <string name="task_title_is_empty">Task title is empty!</string>
    <string name="appwidget_text">Task Title</string>
    <string name="add_widget">Add widget</string>
    <string name="my_progress">My Progress</string>
    <string name="my_tasks">My Tasks</string>
    <string name="daily_routine">Daily Routine</string>
    <string name="events">Events</string>
    <string name="habit">Habit</string>
    <string name="to_buy_list">To Buy List</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">proceed deleting?</string>
    <string name="update">Update</string>
    <string name="time">Time</string>
</resources>
